# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my_test.yml
gendiff/: .gendiff.py.swp  gendiff.py  get_dicts_from_files.py  get_diff_structure.py  make_dicts.py  make_format_changes.py  parsing.py
gendiff/formaters/: .stylish.py.swp  get_json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/gendiff/: __init__.py
tests/: test_gendiff.py  test_gendiff1.py  test_gendiff2.py  test_gendiff3.py
tests/fixtures/test_generate_diff_2/: expected_result  file2.json
tests/fixtures/test_generate_diff_3/: file2.json
