[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexander Maksimovich"]
packages = [
    { include = "hexlet_code/gendiff" },
]


[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "hexlet_code.gendiff.__init__:main"
